syntax = "proto3";

package grpc;

service DeliveryService {
  rpc Delivery (DeliveryRequest) returns (DeliveryResponse) {}
  rpc Statistics (StatisticsRequest) returns (StatisticsResponse) {}
}

message DeliveryRequest {
  int64 bean_id = 1;
  int64 carrier_id = 2;
  int64 supplier_id = 3;
}

message DeliveryResponse {
  int64 status = 1;
  string message = 2;
}

message StatisticsRequest {
  string reason = 1;
}

message StatisticsResponse {
  int64 percent = 1;
}
